- Fixing coins buffs - Nickname input text - Improving nickname label visibility

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,12 @@ body {
     width: 100%;
     height: 100%;
     color: #666666;
+    overflow: hidden;
+    background-image:url(../img/bg.jpg);
+    background-attachment: fixed;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-color: #000;
 }
 
 #center-container {
@@ -14,24 +20,47 @@ body {
 }
 
 .game-content {
-    position: absolute;
+    position: relative;
+    text-align: center;
 }
 
 #pre-game {
-    width: 100%;
-    height: 100%;
+    display: block;
     user-select: none;
-    padding-top: 5px;
     text-align: center;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 0 auto;
+}
+
+#pre-game-in {
+    padding-top: 70px;
+    display: inline-block;
+}
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin: 10px 0px;
 }
 
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    padding-top: 20px;
     transition: 0.3s;
+    background: #38302c;
     display: inline-block;
     cursor: pointer;
     margin-right: 10px;
+    color: white;
     user-select: none;
     width: 180px;
 }
@@ -43,5 +72,9 @@ body {
 
 /* Add some padding inside the card container */
 .container {
-    padding: 2px 16px;
+    padding: 0px;
+}
+
+.card h4 {
+  margin: 0px; 
 }
